# eip-search

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.forgejo/workflows/: release.yml
.gitea/workflows/: release.yml
.github/workflows/: release.yml
eip_search/: __init__.py  __main__.py  cli.py  client.py  config.py  display.py  generate.py  local_client.py  models.py  ranking.py
packaging/deb/: Dockerfile  build.sh  postinst.sh  postrm.sh  preinst.sh
packaging/jenkins/: build.sh
scripts/: bump_version.py
