[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eip-search"
version = "0.3.9"
description = "CLI intelligence tool for the Exploit Intelligence Platform — a modern searchsploit replacement"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Exploit Intelligence Platform"}]
keywords = ["security", "exploits", "vulnerability", "cve", "searchsploit", "pentesting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "shellingham>=1.5.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
eip-search = "eip_search.cli:app"

[project.urls]
Homepage = "https://exploit-intel.com"
Repository = "https://codeberg.org/exploit-intel/eip-search"

[tool.setuptools.packages.find]
include = ["eip_search*"]
